Bug #52453: fix overwiew button text wrapping

--- a/management/univention-web/css/site/overview.styl
+++ b/management/univention-web/css/site/overview.styl
@@ -45,6 +45,7 @@
 
 	.dijitButtonText
 		margin-top: 1em
+		white-space: pre-line
 
 
 .warning
